generated/checkers/gen/AllGen-Double-Free-e61dd678601eac53d501dda1eb1bcffec7b11bd6/build_logs/syntax-repair-02/build_stderr_4.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::addFreedFieldToState(const clang::ento::MemRegion*, const clang::FieldDecl*, const clang::Stmt*, clang::ento::CheckerContext&, llvm::StringRef) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:190:19: error: cannot convert ‘const clang::FieldDecl*’ to ‘llvm::ImmutableSet<const clang::FieldDecl*>’
  190 |   Current = F.add(FD, Current);
      |                   ^~
      |                   |
      |                   const clang::FieldDecl*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableMap.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/Environment.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:999:49: note:   initializing argument 1 of ‘llvm::ImmutableSet<ValT, ValInfo> llvm::ImmutableSet<ValT, ValInfo>::Factory::add(llvm::ImmutableSet<ValT, ValInfo>, llvm::ImmutableSet<ValT, ValInfo>::value_type_ref) [with ValT = const clang::FieldDecl*; ValInfo = llvm::ImutContainerInfo<const clang::FieldDecl*>; llvm::ImmutableSet<ValT, ValInfo>::value_type_ref = const clang::FieldDecl*]’
  999 |     [[nodiscard]] ImmutableSet add(ImmutableSet Old, value_type_ref V) {
      |                                    ~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:104:18: warning: ‘static const clang::FieldDecl* {anonymous}::SAGenTestChecker::getFreedFieldFromArg(const clang::Expr*)’ defined but not used [-Wunused-function]
  104 | const FieldDecl* SAGenTestChecker::getFreedFieldFromArg(const Expr *E) {
      |                  ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
